syntax = "proto3";

package user;

enum GENDER {
  MALE = 0;
  FEMALE = 1;
  OTHER = 2;
}

enum PROVIDER {
  GOOGLE = 0;
  GITHUB = 1;
  LOCAL = 2;
}

enum ROLE {
  USER = 0;
  ADMIN = 1;
}

message User {
  string id = 1;
  string email = 2;
  string password = 3;
  optional string fullName = 4;
  GENDER gender = 5;
  PROVIDER provider = 6;
  string avatar = 7;
  repeated ROLE roles = 8;
}

message CreateUserRequest {
  optional string id = 1;
  optional string email = 2;
  optional string password = 3;
  optional string fullName = 4;
  optional GENDER gender = 5;
  optional PROVIDER provider = 6;
  optional string avatar = 7;
  repeated ROLE roles = 8;
}

message CreateUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  optional string id = 1;
  optional string email = 2;
  optional string password = 3;
  optional string fullName = 4;
  optional GENDER gender = 5;
  optional PROVIDER provider = 6;
  optional string avatar = 7;
  repeated ROLE roles = 8;
}

message UpdateUserResponse {
  bool success = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message GetUserByIdRequest {
  string id = 1;
}

message GetUserByIdResponse {
  User user = 1;
}

message GetUserByCredentialsRequest {
  optional string email = 1;
  optional string password = 2;
}

message GetUserByCredentialsResponse {
  User user = 1;
}

message GetAllUsersFilter {
  optional string id = 1;
  optional string email = 2;
  optional string password = 3;
  optional string fullName = 4;
  optional GENDER gender = 5;
  optional PROVIDER provider = 6;
  optional string avatar = 7;
  repeated ROLE roles = 8;
}

message GetAllUsersParams {
  int32 page = 1;
  int32 limit = 2;
}

message GetAllUsersRequest {
  optional GetAllUsersFilter filter = 1;
  optional GetAllUsersParams params = 2;
}

message GetAllUsersResponse {
  repeated User data = 1;
  optional int32 total = 2;
  optional int32 page = 3;
  optional int32 limit = 4;
  optional int32 totalPages = 5;
}

message VerifyUserCredentialsRequest {
  string email = 1;
  string password = 2;
}

message VerifyUserCredentialsResponse {
  User user = 1;
}

service UserService {
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc GetUserByCredentials (GetUserByCredentialsRequest) returns (GetUserByCredentialsResponse);
  rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse);
  rpc VerifyUserCredentials (VerifyUserCredentialsRequest) returns (VerifyUserCredentialsResponse);
}